<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="16dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/animal_constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/animalNameValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:text="@string/animal_name"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/update_button" />

        <ImageButton
            android:id="@+id/update_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:background="@color/transparent"
            android:contentDescription="@string/update_animal_button_descr"
            android:padding="5dp"
            android:src="@drawable/ic_baseline_edit_24"
            app:layout_constraintEnd_toStartOf="@id/delete_button"
            app:layout_constraintStart_toEndOf="@id/animalNameValue"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="5dp"
            android:padding="5dp"
            android:src="@drawable/ic_baseline_delete_24"
            android:background="@color/transparent"
            app:layout_constraintStart_toEndOf="@id/update_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/delete_animal_button_descr" />

        <TextView
            android:id="@+id/animalAgeLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/animal_age_label"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/animalNameValue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/animalBreedLabel"/>
        <TextView
            android:id="@+id/animalAgeValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:text="@string/animal_age_value"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/animalNameValue"
            app:layout_constraintStart_toEndOf="@id/animalAgeLabel"
            app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
            android:id="@+id/animalBreedLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/animal_breed_label"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/animalAgeLabel"
            app:layout_constraintStart_toStartOf="parent" />
        <TextView
            android:id="@+id/animalBreedValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/animal_breed_value"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/animalAgeValue"
            app:layout_constraintStart_toEndOf="@id/animalBreedLabel"
            app:layout_constraintEnd_toEndOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>